force-app/main/default/objects/Forrester_OSP_Project__x/Forrester_OSP_Project__x.object-meta.xml
<CustomObject>
    <description>Forrester_OSP_Project</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_OSP_Project</externalName>
    <label>OSP Project</label>
    <pluralLabel>OSP Projects</pluralLabel>
</CustomObject>