force-app/main/default/objects/Forrester_OSP_Project__x/fields/AGREEMENT_TYPE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TYPE_DESCRIPTION__c</fullName>
    <description>AGREEMENT_TYPE_DESCRIPTION</description>
    <externalDeveloperName>AGREEMENT_TYPE_DESCRIPTION</externalDeveloperName>
    <label>AGREEMENT_TYPE_DESCRIPTION</label>
    <length>40</length>
    <type>Text</type>
</CustomField>