force-app/main/default/objects/Forrester_OSP_Project__x/fields/AUTHORIZED_TOTAL_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AUTHORIZED_TOTAL_AMOUNT__c</fullName>
    <description>AUTHORIZED_TOTAL_AMOUNT</description>
    <externalDeveloperName>AUTHORIZED_TOTAL_AMOUNT</externalDeveloperName>
    <label>AUTHORIZED_TOTAL_AMOUNT</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>