force-app/main/default/objects/Forrester_OSP_Project__x/fields/AWARD_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AWARD_STATUS__c</fullName>
    <description>AWARD_STATUS</description>
    <externalDeveloperName>AWARD_STATUS</externalDeveloperName>
    <label>AWARD_STATUS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>