force-app/main/default/objects/Forrester_OSP_Project__x/fields/AWARD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AWARD_TYPE__c</fullName>
    <description>AWARD_TYPE</description>
    <externalDeveloperName>AWARD_TYPE</externalDeveloperName>
    <label>AWARD_TYPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>