force-app/main/default/objects/Forrester_OSP_Project__x/fields/COST_COLLECTOR_CATEGORY_DESC__c.field-meta.xml
<CustomField>
    <fullName>COST_COLLECTOR_CATEGORY_DESC__c</fullName>
    <description>COST_COLLECTOR_CATEGORY_DESC</description>
    <externalDeveloperName>COST_COLLECTOR_CATEGORY_DESC</externalDeveloperName>
    <label>COST_COLLECTOR_CATEGORY_DESC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>