force-app/main/default/objects/Forrester_OSP_Project__x/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <description>DESCRIPTION</description>
    <externalDeveloperName>DESCRIPTION</externalDeveloperName>
    <label>DESCRIPTION</label>
    <length>120</length>
    <type>Text</type>
</CustomField>