force-app/main/default/objects/Forrester_OSP_Project__x/fields/FUNDING_CLASS__c.field-meta.xml
<CustomField>
    <fullName>FUNDING_CLASS__c</fullName>
    <description>FUNDING_CLASS</description>
    <externalDeveloperName>FUNDING_CLASS</externalDeveloperName>
    <label>FUNDING_CLASS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>