force-app/main/default/objects/Forrester_OSP_Project__x/fields/GOVERNMENT_CONTRACT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>GOVERNMENT_CONTRACT_NUMBER__c</fullName>
    <description>GOVERNMENT_CONTRACT_NUMBER</description>
    <externalDeveloperName>GOVERNMENT_CONTRACT_NUMBER</externalDeveloperName>
    <label>GOVERNMENT_CONTRACT_NUMBER</label>
    <length>24</length>
    <type>Text</type>
</CustomField>