force-app/main/default/objects/Forrester_OSP_Project__x/fields/IN_IMAGE_SILO_FLAG__c.field-meta.xml
<CustomField>
    <fullName>IN_IMAGE_SILO_FLAG__c</fullName>
    <description>IN_IMAGE_SILO_FLAG</description>
    <externalDeveloperName>IN_IMAGE_SILO_FLAG</externalDeveloperName>
    <label>IN_IMAGE_SILO_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>