force-app/main/default/objects/Forrester_OSP_Project__x/fields/IS_CLOSED_PROJECT_WBS__c.field-meta.xml
<CustomField>
    <fullName>IS_CLOSED_PROJECT_WBS__c</fullName>
    <description>IS_CLOSED_PROJECT_WBS</description>
    <externalDeveloperName>IS_CLOSED_PROJECT_WBS</externalDeveloperName>
    <label>IS_CLOSED_PROJECT_WBS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>