force-app/main/default/objects/Forrester_OSP_Project__x/fields/MASTER_PROJECT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>MASTER_PROJECT_NUMBER__c</fullName>
    <description>MASTER_PROJECT_NUMBER</description>
    <externalDeveloperName>MASTER_PROJECT_NUMBER</externalDeveloperName>
    <label>MASTER_PROJECT_NUMBER</label>
    <length>7</length>
    <type>Text</type>
</CustomField>