force-app/main/default/objects/Forrester_OSP_Project__x/fields/MOD_DATE__c.field-meta.xml
<CustomField>
    <fullName>MOD_DATE__c</fullName>
    <description>MOD_DATE</description>
    <externalDeveloperName>MOD_DATE</externalDeveloperName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>