force-app/main/default/objects/Forrester_OSP_Project__x/fields/OSP_PROJECT_NUM__c.field-meta.xml
<CustomField>
    <fullName>OSP_PROJECT_NUM__c</fullName>
    <description>OSP_PROJECT_NUM</description>
    <externalDeveloperName>OSP_PROJECT_NUM</externalDeveloperName>
    <label>OSP_PROJECT_NUM</label>
    <length>12</length>
    <type>Text</type>
</CustomField>