force-app/main/default/objects/Forrester_OSP_Project__x/fields/OSP_PROJECT_RECID__c.field-meta.xml
<CustomField>
    <fullName>OSP_PROJECT_RECID__c</fullName>
    <description>OSP_PROJECT_RECID</description>
    <externalDeveloperName>OSP_PROJECT_RECID</externalDeveloperName>
    <label>OSP_PROJECT_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>