force-app/main/default/objects/Forrester_OSP_Project__x/fields/PROFIT_CENTER_ID__c.field-meta.xml
<CustomField>
    <fullName>PROFIT_CENTER_ID__c</fullName>
    <description>PROFIT_CENTER_ID</description>
    <externalDeveloperName>PROFIT_CENTER_ID</externalDeveloperName>
    <label>PROFIT_CENTER_ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>