force-app/main/default/objects/Forrester_OSP_Project__x/fields/PROJECT_PROFILE_DESC__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_PROFILE_DESC__c</fullName>
    <description>PROJECT_PROFILE_DESC</description>
    <externalDeveloperName>PROJECT_PROFILE_DESC</externalDeveloperName>
    <label>PROJECT_PROFILE_DESC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>