force-app/main/default/objects/Forrester_OSP_Project__x/fields/PROJECT_WBS_EXPIRATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_WBS_EXPIRATION_DATE__c</fullName>
    <description>PROJECT_WBS_EXPIRATION_DATE</description>
    <externalDeveloperName>PROJECT_WBS_EXPIRATION_DATE</externalDeveloperName>
    <label>PROJECT_WBS_EXPIRATION_DATE</label>
    <type>DateTime</type>
</CustomField>