force-app/main/default/objects/Forrester_OSP_Project__x/fields/SAP_SPONSOR_CODE__c.field-meta.xml
<CustomField>
    <fullName>SAP_SPONSOR_CODE__c</fullName>
    <description>SAP_SPONSOR_CODE</description>
    <externalDeveloperName>SAP_SPONSOR_CODE</externalDeveloperName>
    <label>SAP_SPONSOR_CODE</label>
    <length>6</length>
    <type>Text</type>
</CustomField>