force-app/main/default/objects/Forrester_OSP_Project__x/fields/SUPERVISOR_MIT_ID__c.field-meta.xml
<CustomField>
    <fullName>SUPERVISOR_MIT_ID__c</fullName>
    <description>SUPERVISOR_MIT_ID</description>
    <externalDeveloperName>SUPERVISOR_MIT_ID</externalDeveloperName>
    <label>SUPERVISOR_MIT_ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>