force-app/main/default/objects/Forrester_OSP_Project__x/fields/UNUSUAL_TERMS_FLAG__c.field-meta.xml
<CustomField>
    <fullName>UNUSUAL_TERMS_FLAG__c</fullName>
    <description>UNUSUAL_TERMS_FLAG</description>
    <externalDeveloperName>UNUSUAL_TERMS_FLAG</externalDeveloperName>
    <label>UNUSUAL_TERMS_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>